src/rules/snapshots/pg_migration_lint__rules__pgm022__tests__drop_existing_table_fires.snap
---
source: src/rules/pgm022.rs
assertion_line: 106
expression: findings
---
- rule_id: PGM022
  severity: Minor
  message: "DROP TABLE 'orders' removes an existing table. This is irreversible and all data will be lost."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
