src/rules/snapshots/pg_migration_lint__rules__pgm022__tests__reindex_table_without_concurrently_fires.snap
---
source: src/rules/pgm022.rs
expression: findings
---
- rule_id: PGM022
  severity: Critical
  message: "REINDEX TABLE 'orders' should use CONCURRENTLY to avoid holding an ACCESS EXCLUSIVE lock. Use REINDEX TABLE CONCURRENTLY 'orders' (PostgreSQL 12+)."
  file: migrations/010.sql
  start_line: 1
  end_line: 1
